feat(bakate-blog): add highlight.js to display some code snippets

--- a/_articles/boolean.mdx
+++ b/_articles/boolean.mdx
@@ -11,5 +11,11 @@ author:
 
 Boolean is a type that represents a value that can be either `true` or `false`.
 
+```ts
+type Boolean = true | false;
+const isTrue: Boolean = true;
+console.log(isTrue); // Logs: true
+```
+
 
 <YoutubeVideo uid="9nDjLYXBCYM" fullScreen={true} title="Nx for React in under 3 minutes" />
