--- a/_articles/null_and_undefined.mdx
+++ b/_articles/null_and_undefined.mdx
@@ -9,4 +9,13 @@ author:
 
 ## Null and Undefined
 
+```ts
+let x: number | null | undefined;
+
+x = 1;
+x = null;
+x = undefined;
+console.log(x); // Logs: undefined
+```
+
 Null and undefined are two special values in JavaScript.
