--- a/_articles/numbers.mdx
+++ b/_articles/numbers.mdx
@@ -9,4 +9,11 @@ author:
 
 ## Numbers
 
+```ts
+let x = 1;
+let y = 2;
+let z = x + y;
+console.log(z); // Logs: 3
+```
+
 Numbers are the simplest type of data in MDX. They are represented by the `number` type.
