--- a/_articles/strings.mdx
+++ b/_articles/strings.mdx
@@ -9,4 +9,11 @@ author:
 
 ## Strings
 
+```ts
+const name = 'Bakate';
+const age = 35;
+const message = `Hello, my name is ${name} and I am ${age} years old.`;
+console.log(message)  // Logs: Hello, my name is Bakate and I am 35 years old.
+```
+
 Strings are a sequence of characters that are enclosed in double quotes.
