feat(bakate-blog): add some content to display

--- a/_articles/boolean.mdx
+++ b/_articles/boolean.mdx
@@ -9,6 +9,8 @@ author:
 
 ## Boolean
 
+<Image src="yes-no.jpg" />
+
 Boolean is a type that represents a value that can be either `true` or `false`.
 
 ```ts
