--- a/_articles/null_and_undefined.mdx
+++ b/_articles/null_and_undefined.mdx
@@ -2,12 +2,21 @@
 title: 'Null and Undefined'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
 date: '2021-12-28T05:35:07.322Z'
-image: 'phones.jpg'
+image: 'null.jpg'
 author:
   name: Bakate BA
 ---
+# Null and Undefined
 
-## Null and Undefined
+<Image src="null.jpg" />
+
+> Why you should avoid using null ?
+
+Null and undefined are two special values in JavaScript.
+
+---
+`Inline code` with backticks
+
 
 ```ts
 let x: number | null | undefined;
@@ -18,4 +27,3 @@ x = undefined;
 console.log(x); // Logs: undefined
 ```
 
-Null and undefined are two special values in JavaScript.
