--- a/_articles/objects.mdx
+++ b/_articles/objects.mdx
@@ -2,12 +2,17 @@
 title: 'Objects'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
 date: '2021-12-28T05:35:07.322Z'
-image: 'objects.jpg'
+image: 'phones.jpg'
 author:
   name: Bakate BA
 ---
 
 ## Objects
+
+<Image src="phones.jpg" />
+
+Objects are the basic building blocks of the game. They are the things that you can interact with.
+
 
 ```ts
 // Create a new object
@@ -25,4 +30,3 @@ description: 'This is my object',
 console.log(obj.name) // Logs: My Object
 ```
 
-Objects are the basic building blocks of the game. They are the things that you can interact with.
