--- a/_articles/numbers.mdx
+++ b/_articles/numbers.mdx
@@ -2,12 +2,17 @@
 title: 'Numbers'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
 date: '2021-12-28T05:35:07.322Z'
-image: 'strings.jpg'
+image: 'numbers.jpg'
 author:
   name: Bakate BA
 ---
 
 ## Numbers
+
+<Image src="numbers.jpg" />
+
+Numbers are the simplest type of data in MDX. They are represented by the `number` type.
+
 
 ```ts
 let x = 1;
@@ -16,4 +21,3 @@ let z = x + y;
 console.log(z); // Logs: 3
 ```
 
-Numbers are the simplest type of data in MDX. They are represented by the `number` type.
