--- a/_articles/strings.mdx
+++ b/_articles/strings.mdx
@@ -9,6 +9,11 @@ author:
 
 ## Strings
 
+<Image src="strings.jpg" />
+
+Strings are a sequence of characters that are enclosed in double quotes.
+
+
 ```ts
 const name = 'Bakate';
 const age = 35;
@@ -16,4 +21,3 @@ const message = `Hello, my name is ${name} and I am ${age} years old.`;
 console.log(message)  // Logs: Hello, my name is Bakate and I am 35 years old.
 ```
 
-Strings are a sequence of characters that are enclosed in double quotes.
