--- a/_articles/boolean.mdx
+++ b/_articles/boolean.mdx
@@ -9,7 +9,7 @@ author:
 
 ## Boolean
 
-<Image src="yes-no.jpg" />
+<Image src="yes_no.jpg" />
 
 Boolean is a type that represents a value that can be either `true` or `false`.
 
